Fix T38887: error in (still unused) freestyle math function implementation.